--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi"
     />
-    <title>HUZAIFA QADEER</title>
+    <title>
+      Best Digital Marketing Trainer for learner| Experienced digital marketing
+      professional.”
+    </title>
+    <meta
+      name="description"
+      content="Explore Huzaifa Qadeer’s website Huzaifa 
+    Qadeer is a professional digital marketing expert and trainer
+    from Pakistan. Unlock the secrets to online success with his
+    comprehensive training and consulting services."
+    />
     <link rel="icon" type="image/png" href="images/favicon.jpg" />
     <link
       rel="stylesheet"
@@ -173,11 +183,12 @@
                 </span>
               </h1>
               <p>
-                I'm a passionate UI/UX designer with a mission to create
-                delightful and intuitive digital experiences. With a strong
-                foundation in design principles and a keen eye for detail, I
-                specialize in translating complex ideas into user-friendly
-                interfaces that captivate and engage.
+                I am a results-driven digital marketing expert and trusted
+                digital marketing trainer with a deep understanding of the
+                digital marketing ecosystem. With a proven track record of
+                creating impactful online campaigns, I specialize in utilizing a
+                combination of creativity, data analysis, and digital marketing
+                tools to achieve measurable results.
               </p>
               <ul>
                 <li>
@@ -244,9 +255,12 @@
               </span>
               <h3>Digital Marketing</h3>
               <p>
-                Nemo design enim ipsam voluptatem quim voluptas sit aspernatur
-                aut odit auting fugit sed thisnquia consequuntur magni dolores
-                eos designer heresm qui
+                Leverage the power of targeted ads to reach potential customers
+                at the right moment.As a best choice for digital marketing
+                expert, I create and manage PPC campaigns and paid advertising
+                campaigns across platforms like Google Ads and social media (
+                Meta, LinkedIn and twitter), optimizing ad spend
+                for maximum ROI.
               </p>
             </div>
           </div>
@@ -261,26 +275,27 @@
               </span>
               <h3>Social Media Marketing</h3>
               <p>
-                Nemo design enim ipsam voluptatem quim voluptas sit aspernatur
-                aut odit auting fugit sed thisnquia consequuntur magni dolores
-                eos designer heresm qui
+                Social media (Facebook, Instagram, Twitter, and LinkedIn) is a
+                most important tool for building relationships and driving brand
+                awareness. I develop and execute social media strategies that
+                resonate with your audience, valuable engagement, and profitable
+                advertisement and build a loyal community of followers.
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="tf__single_service fade_left" data-trigerId="service">
               <span>
-                <img
-                  src="./images/SEO.png"
-                  alt="service"
-                  class="svg w-100"
-                />
+                <img src="./images/SEO.png" alt="service" class="svg w-100" />
               </span>
               <h3>Seo And Sem</h3>
               <p>
-                Nemo design enim ipsam voluptatem quim voluptas sit aspernatur
-                aut odit auting fugit sed thisnquia consequuntur magni dolores
-                eos designer heresm qui
+                Raise your online presence with my SEO strategies, improve your
+                website's visibility on search engines. From keyword research
+                and on-page optimization to backlink building, I provide all
+                solutions in my service and ensure that your website ranks
+                higher, attracting organic traffic and increasing brand
+                credibility.
               </p>
             </div>
           </div>
@@ -301,20 +316,25 @@
             <div class="tf__section_heading pb_80 xs_pb_50">
               <h5 class="has-animation">About Me</h5>
               <h2 class="has-animation">
-                Transforming visions into exceptional portfolios
+                Experienced Digital Marketing Trainer and Expert
               </h2>
             </div>
             <div class="tf__about_text">
               <p>
-                Nemo design enim ipsam voluptatem quim voluptas sit aspernatur
-                aut odit auting fugit sed thisnquia consequuntur magni dolores
-                eos designer heresm qui ratione
+                Huzaifa Qadeer here, as a trusted digital marketing trainer and
+                experienced digital marketing professional and trusted trainer,
+                I'm passionate about guiding businesses and individuals toward
+                digital success. I have experience of working with small
+                businesses as a freelance digital marketing expert and developed
+                online marketing strategies with SEO, SEM, PPC, Google Ads, and
+                Social Media Marketing.
               </p>
+
               <a
                 class="common_btn"
                 download
-                href="./images/Huzaifa Qadeer Profile.pdf"
-                >Download Cv <i class="fa-solid fa-download"></i
+                href="https://www.linkedin.com/in/huzaifa-qadeer-digitalmarketingtrainer"
+                >Learn More <i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
           </div>
@@ -328,8 +348,8 @@
               <div class="tf__about_img_text">
                 <i class="fa-solid fa-chart-pie"></i>
                 <div class="tf__about_content">
-                  <h4>Daily Activity</h4>
-                  <p>Loream is ispam</p>
+                  <h4>Huzaifa Qadeer</h4>
+                  <p>Digital Marketing Trainer</p>
                 </div>
               </div>
             </div>
@@ -351,11 +371,10 @@
             <div class="tf__design_text">
               <h2>Design <span>and Innovation</span></h2>
               <p class="">
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                auting fugit sed thisnquia consequuntur magni dolores eos
-                designer heresm qui ratione voluptatem sequi nesciuNeque porro
-                quisquam est, oursqui dolorem ipsum quia dolor sit amet
-                consectetur, adipisci velit, sed quia non numquam
+                I have experience of working with small businesses as a
+                freelance digital marketing expert and developed online
+                marketing strategies with SEO, SEM, PPC, Google Ads, and Social
+                Media Marketing.
               </p>
             </div>
             <div class="row">
