--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
             <div class="tf__section_heading mb_40">
               <h5 class="has-animation">MY serivce</h5>
               <h2 class="has-animation">
-                Crafting stories through <br />
-                design and innovation
+                Start your digital marketing journey <br />
+                with Best Services
               </h2>
             </div>
           </div>
@@ -321,13 +321,13 @@
             </div>
             <div class="tf__about_text">
               <p>
-                Huzaifa Qadeer here, as a trusted digital marketing trainer and
-                experienced digital marketing professional and trusted trainer,
-                I'm passionate about guiding businesses and individuals toward
-                digital success. I have experience of working with small
-                businesses as a freelance digital marketing expert and developed
-                online marketing strategies with SEO, SEM, PPC, Google Ads, and
-                Social Media Marketing.
+                Huzaifa Qadeer here, as a Best Digital Marketing Trainer and
+                experienced digital marketing professional, I'm passionate about
+                guiding businesses and individuals toward digital success. I
+                have experience of working with small businesses as a freelance
+                digital marketing expert and developed online marketing
+                strategies with SEO, SEM, PPC, Google Ads, and Social
+                Media Marketing.
               </p>
 
               <a
@@ -369,12 +369,15 @@
         <div class="row">
           <div class="col-xl-6 col-lg-6">
             <div class="tf__design_text">
-              <h2>Design <span>and Innovation</span></h2>
+              <!-- <h2>Design <span>and Innovation</span></h2> -->
+              <h2>
+                Unlock
+                <span> Your Digital Potential with Huzaifa</span>
+              </h2>
               <p class="">
-                I have experience of working with small businesses as a
-                freelance digital marketing expert and developed online
-                marketing strategies with SEO, SEM, PPC, Google Ads, and Social
-                Media Marketing.
+                Feel free to Contact with me today to discuss how I can grow
+                your online presence and drive meaningful results in the
+                ever-evolving digital landscape.
               </p>
             </div>
             <div class="row">
@@ -520,7 +523,8 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>HTML</p>
+              <p>Digital Marketing
+              </p>
               <div id="bar1" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -535,7 +539,8 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Python</p>
+              <p>Social Media Marketing
+              </p>
               <div id="bar2" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -550,7 +555,8 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>CSS</p>
+              <p>SEO and SEM
+              </p>
               <div id="bar3" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -565,7 +571,8 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Photoshop</p>
+              <p>Google Ads
+              </p>
               <div id="bar4" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -580,7 +587,8 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Java Script</p>
+              <p>Video Editing
+              </p>
               <div id="bar5" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -595,7 +603,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Figma</p>
+              <p>Creative Designing</p>
               <div id="bar6" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
