--- a/index.html
+++ b/index.html
@@ -523,8 +523,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Digital Marketing
-              </p>
+              <p>Digital Marketing</p>
               <div id="bar1" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -539,8 +538,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Social Media Marketing
-              </p>
+              <p>Social Media Marketing</p>
               <div id="bar2" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -555,8 +553,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>SEO and SEM
-              </p>
+              <p>SEO and SEM</p>
               <div id="bar3" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -571,8 +568,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Google Ads
-              </p>
+              <p>Google Ads</p>
               <div id="bar4" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -587,8 +583,7 @@
               data-trigerId="skills"
               data-stagger=".25"
             >
-              <p>Video Editing
-              </p>
+              <p>Video Editing</p>
               <div id="bar5" class="barfiller">
                 <div class="tipWrap">
                   <span class="tip"></span>
@@ -743,7 +738,7 @@
               </p>
               <h3>Maaz Anis</h3>
               <h5>Marketing Coordinator</h5>
-              <p class="description">
+              <p class="description commentBox">
                 Sir Huzaifa Qadeer is a true master in the field of digital
                 marketing. Their extensive knowledge of various digital
                 marketing channels such as SEO, PPC, social media, and email
@@ -769,7 +764,7 @@
               </p>
               <h3>Huzaifa Imran</h3>
               <h5>Marketing Coordinator</h5>
-              <p class="description">
+              <p class="description commentBox">
                 Your passion for teaching and your concern for all your
                 student's well being have all appreciated, your dedication to
                 your student's success is truly remarkable.”
@@ -794,7 +789,7 @@
               </p>
               <h3>Maryam Farooq</h3>
               <h5>Marketing Coordinator</h5>
-              <p class="description">
+              <p class="description commentBox">
                 Huzaifa Qadeer is the great human being and the best digital
                 marketing trainer. He always motivate and guide us I learned a
                 lot from you. Thank you sir.”
