--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi"
     />
     <title>
-      Best Digital Marketing Trainer for learner| Experienced digital marketing
-      professional.”
+      Digital Marketing Trainer for learner from pakistan | Best marketing
+      services provider.”
     </title>
     <meta
       name="description"
@@ -32,6 +32,15 @@
     <link rel="stylesheet" href="css/spacing.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'
+    />
+    <link rel="stylesheet" href="./css/gallery.css" />
   </head>
 
   <body>
@@ -393,7 +402,7 @@
                       class="svg img-fluid w-100"
                     />
                   </span>
-                  <h3><span class="counter">10</span>k+</h3>
+                  <h3><span class="counter">50</span>+</h3>
                   <p>Complete project</p>
                 </div>
               </div>
@@ -409,7 +418,7 @@
                       class="img-fluid w-100 svg"
                     />
                   </span>
-                  <h3><span class="counter">800</span>+</h3>
+                  <h3><span class="counter">100</span>+</h3>
                   <p>Client review</p>
                 </div>
               </div>
@@ -418,10 +427,7 @@
           <div class="col-xl-6 col-lg-6">
             <div class="tf__design_form">
               <h2 class="has-animation">GET TOUCH ME?</h2>
-              <p class="">
-                For your car we will do everything advice design in us repairs
-                and maintenance We are the some preferred.
-              </p>
+              <p class="">Feel free to Contact with me today.</p>
               <form action="#">
                 <input class="" type="text" placeholder="Your Name" />
                 <input class="" type="email" placeholder="Your Email" />
@@ -446,7 +452,7 @@
         <div class="row">
           <div class="col-xl-10 col-lg-8 m-auto mb_60">
             <div class="tf__section_heading mb_40">
-              <h5 class="has-animation">Education & Skill</h5>
+              <h5 class="has-animation">Experience & Skill</h5>
               <h2 class="has-animation">
                 Showcasing your talent <br />
                 amplifying your impact
@@ -631,74 +637,140 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-8 col-md-6">
-            <a
-              href="https://www.youtube.com/watch?v=B-ytMSuwbf8"
-              class="tf__portfolio_item play_btn"
-              data-cursor="Watch <br> video"
-            >
-              <img
-                src="images/portfolio/1.jpg"
-                alt="portfolio"
-                class="img-fluid w-100"
-              />
-              <div class="text">
-                <h4>sheet metal bending</h4>
-                <p>youtube</p>
+          <!-- ////////////// MY GALLERY /////////// -->
+          <div class="slider-container">
+            <div class="left-slide">
+              <div style="background-color: #fde">
+                <h1>Pink Cherrish</h1>
+                <p>to evolve into care</p>
               </div>
-            </a>
-          </div>
-          <div class="col-xl-4 col-md-6">
-            <a
-              class="tf__portfolio_item play_btn"
-              href="https://vimeo.com/132528823"
-              data-cursor="Watch <br> video"
-            >
-              <img
-                src="images/portfolio/2.jpg"
-                alt="portfolio"
-                class="img-fluid w-100"
-              />
-              <div class="text">
-                <h4>sheet metal bending</h4>
-                <p>Vimeo</p>
+              <div style="background-color: rgb(254, 160, 0)">
+                <h1>Yellow Luck</h1>
+                <p>Shinning the clouds</p>
               </div>
-            </a>
-          </div>
-          <div class="col-xl-6 col-md-6">
-            <a
-              href="https://w.soundcloud.com/player/?visual=true&amp;url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F159967086&amp;show_artwork=true&amp;maxwidth=1020&amp;maxheight=1000&amp;auto_play=1"
-              class="tf__portfolio_item play_btn"
-              data-cursor="Audio <br> sound"
-            >
-              <img
-                src="images/portfolio/3.jpg"
-                alt="portfolio"
-                class="img-fluid w-100"
-              />
-              <div class="text">
-                <h4>sheet metal bending</h4>
-                <p>soundcloud</p>
+              <div style="background-color: rgb(231, 58, 95)">
+                <h1>Redness Lust</h1>
+                <p>in the wilderness</p>
               </div>
-            </a>
-          </div>
-          <div class="col-xl-6 col-md-6">
-            <a
-              href="images/portfolio/4.jpg"
-              class="tf__portfolio_item image_popup"
-              data-cursor="View <br> Image"
-            >
-              <img
-                src="images/portfolio/4.jpg"
-                alt="portfolio"
-                class="img-fluid w-100"
-              />
-              <div class="text">
-                <h4>sheet metal bending</h4>
-                <p>Image</p>
+              <div style="background-color: rgb(176, 136, 240)">
+                <h1>Lavanda Love</h1>
+                <p>in the sunset</p>
               </div>
-            </a>
+              <div style="background-color: #fde">
+                <h1>Pink Cherrish</h1>
+                <p>to evolve into care</p>
+              </div>
+              <div style="background-color: rgb(254, 160, 0)">
+                <h1>Yellow Luck</h1>
+                <p>Shinning the clouds</p>
+              </div>
+              <div style="background-color: rgb(231, 58, 95)">
+                <h1>Redness Lust</h1>
+                <p>in the wilderness</p>
+              </div>
+              <div style="background-color: rgb(176, 136, 240)">
+                <h1>Lavanda Love</h1>
+                <p>in the sunset</p>
+              </div>
+              <div style="background-color: #fde">
+                <h1>Pink Cherrish</h1>
+                <p>to evolve into care</p>
+              </div>
+              <div style="background-color: rgb(254, 160, 0)">
+                <h1>Yellow Luck</h1>
+                <p>Shinning the clouds</p>
+              </div>
+              <div style="background-color: rgb(231, 58, 95)">
+                <h1>Redness Lust</h1>
+                <p>in the wilderness</p>
+              </div>
+              <div style="background-color: rgb(176, 136, 240)">
+                <h1>Lavanda Love</h1>
+                <p>in the sunset</p>
+              </div>
+              <div style="background-color: rgb(231, 58, 95)">
+                <h1>Redness Lust</h1>
+                <p>in the wilderness</p>
+              </div>
+            </div>
+            <div class="right-slide">
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(10\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(11\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(12\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(13\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(14\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(1\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(3\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(4\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(5\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(6\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(7\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(8\).jpg');
+                "
+              ></div>
+              <div
+                style="
+                  background-image: url('./images/PortfolioImages/Huzaifa\ portfolio\ \(9\).jpg');
+                "
+              ></div>
+            </div>
+            <div class="action-buttons">
+              <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+              </button>
+              <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+              </button>
+            </div>
           </div>
+
+          <!-- ////////////// MY GALLERY /////////// -->
         </div>
       </div>
     </section>
@@ -828,7 +900,7 @@
     <!--================================
         BLOG START
     =================================-->
-    <!-- <section class="tf__blog pt_125 xs_pt_75 pb_40 xs_pb_0" id="blogs">
+    <section class="tf__blog pt_125 xs_pt_75 pb_40 xs_pb_0" id="blogs">
       <div class="container">
         <div class="row">
           <div class="col-xl-8 col-lg-9 mb_30">
@@ -933,14 +1005,15 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!--================================
         BLOG END
     =================================-->
+
     <!--================================
         SUBSCRIBE START
     =================================-->
-    <div class="tf__subscribe" style="background: url(images/bg/subscribe.jpg)">
+    <!-- <div class="tf__subscribe" style="background: url(images/bg/subscribe.jpg)">
       <div class="tf__subscribe_overlay pt_115 xs_pt_75 pb_120 xs_pb_80">
         <div class="container">
           <div class="row">
@@ -956,7 +1029,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--================================
 SUBSCRIBE END
 =================================-->
@@ -977,16 +1050,32 @@ SUBSCRIBE END
                 >
                   <div class="icon">
                     <div class="icon-contianer">
-                      <img
-                        src="svg/map.svg"
-                        alt="footer"
-                        class="img-fluid w-100 svg"
-                      />
+                      <i
+                        class="fa-solid fa-share-nodes"
+                        style="font-size: 30px"
+                      ></i>
                     </div>
                   </div>
                   <div class="text">
-                    <h3>Address</h3>
-                    <p>2118 Thornridge Cir. Syracuse, Connecticut 35624</p>
+                    <h3>Social Links</h3>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/huzaifa-qadeer-digitalmarketingtrainer"
+                      ><i class="fa-brands fa-linkedin"></i> &nbsp; LinkedIn </a
+                    ><a
+                      target="_blank"
+                      href="https://www.facebook.com/HuzaifaQadeerDigitalMarketingTrainer"
+                      ><i class="fa-brands fa-facebook"></i> &nbsp; Facebook
+                    </a>
+                    <a target="_blank" href="https://x.com/huzaifaqadeerDM?s=08"
+                      ><i class="fa-brands fa-square-x-twitter"></i> &nbsp;
+                      Twitter
+                    </a>
+                    <a
+                      target="_blank"
+                      href="https://youtube.com/@huzaifaqadeer_"
+                      ><i class="fa-brands fa-youtube"></i> &nbsp; Youtube
+                    </a>
                   </div>
                 </div>
               </div>
@@ -998,17 +1087,16 @@ SUBSCRIBE END
                 >
                   <div class="icon">
                     <div class="icon-contianer">
-                      <img
-                        src="svg/phone.svg"
-                        alt="footer"
-                        class="img-fluid w-100 svg"
-                      />
+                      <i
+                        class="fa-solid fa-address-book"
+                        style="font-size: 30px"
+                      ></i>
                     </div>
                   </div>
                   <div class="text">
                     <h3>Lets talk us</h3>
-                    <a href="callto:1234567890">(603) 555-0123</a>
-                    <a href="callto:1234567890">(603) 555-0123</a>
+                    <a href="callto:1234567890">+92 340 8629770</a>
+                    <a href="callto:1234567890">+92 310 2035556</a>
                   </div>
                 </div>
               </div>
@@ -1020,19 +1108,20 @@ SUBSCRIBE END
                 >
                   <div class="icon">
                     <div class="icon-contianer">
-                      <img
-                        src="svg/envelope.svg"
-                        alt="footer"
-                        class="img-fluid w-100 svg"
-                      />
+                      <i
+                        class="fa-solid fa-envelope"
+                        style="font-size: 30px"
+                      ></i>
                     </div>
                   </div>
                   <div class="text">
                     <h3>Send us email</h3>
-                    <a href="mailto:example@gmail.com"
-                      >deanna.curtis@example.com</a
+                    <a href="mailto:huzaifaahmed462@gmail.com"
+                      >huzaifaahmed462@gmail.com</a
                     >
-                    <a href="mailto:example@gmail.com">curtis@example.com</a>
+                    <a href="mailto:maazanis48@gmail.com"
+                      >maazanis48@gmail.com</a
+                    >
                   </div>
                 </div>
               </div>
@@ -1040,7 +1129,7 @@ SUBSCRIBE END
             <div class="row">
               <div class="col-12">
                 <div class="tf__footer_copyright">
-                  <p>© CodeeFly 2023 | All Rights Reserved</p>
+                  <p>© Huzaifa Qadeer 2023 | All Rights Reserved</p>
                   <ul>
                     <li>
                       <a href="#" class="text_hover_animaiton"
@@ -1102,5 +1191,9 @@ SUBSCRIBE END
     <script src="js/animation.js"></script>
     <!--main/custom js-->
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./js/gallery.js"></script>
   </body>
 </html>
