--- a/index.html
+++ b/index.html
@@ -913,7 +913,151 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-4 col-md-6">
+          <div
+            style="
+              width: 100%;
+              height: 70vh;
+              overflow: hidden;
+              padding: 0px;
+              position: relative;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            "
+          >
+            <div class="slides-certificate" id="slides-main-container">
+              <img
+                class="certificate-image certificate-image-1 active-certificate"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (7).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-2"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (1).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-3"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (2).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-4"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (3).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+              <img
+                class="certificate-image certificate-image-5"
+                src="./images/Certifications And Achievements/Huzaifa Qadeer Digital Marketing Expert and trainer (4).png"
+                alt=""
+              />
+            </div>
+            <div class="slider-arrow-certificate">
+              <div class="arrowIcons" id="left-icon-certificate">
+                <i class="fa-solid fa-arrow-left"></i>
+              </div>
+              <div class="arrowIcons" id="right-icon-certificate">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="col-xl-4 col-md-6">
             <div class="tf__slingle_blog fade_left" data-trigerId="blogs">
               <a
                 href="blog_details.html"
@@ -1002,7 +1146,7 @@
           </div>
           <div class="col-12">
             <a href="blog_list.html" class="common_btn">More Blog +</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
